@@ -19,6 +19,8 @@ Plans for 0.3.3
       [D] Open button on the main toolbar missing tooltip
       [D] Open dialog not always defaulting to directory of last opened file
 
+    Performance. Note in guiinit.py.
+
 
 Plans for 0.4.0
 ===============
